--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -18,8 +18,14 @@
         android:title="Login"
         android:visible="false"
         />
-    <item android:id="@+id/honepage"
+    <item android:id="@+id/homepage"
         android:title="Home"
+        />
+    <item android:id="@+id/order"
+        android:title="Order"
+        />
+    <item android:id="@+id/signup"
+        android:title="Sign up"
         />
 
 
