--- a/app/src/main/res/layout/cus_row_home_res.xml
+++ b/app/src/main/res/layout/cus_row_home_res.xml
@@ -4,4 +4,35 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:orientation="horizontal"
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:layout_width="112dp"
+        android:id="@+id/firs_res_imaget"
+        android:layout_height="112dp" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/res_Name_home"
+            android:layout_width="295dp"
+            android:layout_height="71dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:id="@+id/res_detail"
+            android:layout_height="43dp" />
+    </LinearLayout>
+</LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="30dp" />
 </LinearLayout>
