--- a/app/src/main/res/layout/cus_dish_layout.xml
+++ b/app/src/main/res/layout/cus_dish_layout.xml
@@ -10,21 +10,40 @@
     <ImageView
         android:id="@+id/dishimage"
         android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:layout_height="92dp"
         app:srcCompat="@drawable/btn_fastfood" />
 
     <TextView
         android:id="@+id/dishname"
         android:layout_width="0dp"
+        android:layout_gravity="center"
         android:layout_height="82dp"
-        android:layout_weight="3"
+        android:layout_weight="4"
         android:text="DishName" />
 
     <Button
-        android:id="@+id/dishqual"
+        android:id="@+id/dishqualreduce"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_weight="1"
-        android:text="Click me to order" />
+        android:text="_" />
+
+    <TextView
+        android:id="@+id/dishqua"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:text="0" />
+
+    <Button
+        android:id="@+id/dishqualreadd"
+        android:layout_width="0dp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="+" />
 </LinearLayout>
