--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,8 +28,8 @@
             android:id="@+id/imageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="52dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
             android:background="@null"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView"
@@ -39,8 +39,8 @@
             android:id="@+id/imageButton2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="52dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="24dp"
             android:background="@null"
             app:layout_constraintStart_toEndOf="@+id/imageButton"
             app:layout_constraintTop_toBottomOf="@+id/imageView"
@@ -50,8 +50,8 @@
             android:id="@+id/imageButton3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="28dp"
             android:background="@null"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageButton"
@@ -61,8 +61,8 @@
             android:id="@+id/imageButton4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="52dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="24dp"
             android:background="@null"
             app:layout_constraintStart_toEndOf="@+id/imageButton8"
             app:layout_constraintTop_toBottomOf="@+id/imageView"
@@ -72,8 +72,8 @@
             android:id="@+id/imageButton5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="28dp"
             android:background="@null"
             app:layout_constraintStart_toEndOf="@+id/imageButton3"
             app:layout_constraintTop_toBottomOf="@+id/imageButton2"
@@ -83,8 +83,8 @@
             android:id="@+id/imageButton6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="28dp"
             android:background="@null"
             app:layout_constraintStart_toEndOf="@+id/imageButton5"
             app:layout_constraintTop_toBottomOf="@+id/imageButton8"
@@ -94,8 +94,8 @@
             android:id="@+id/imageButton7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="32dp"
             android:background="@null"
             app:layout_constraintStart_toEndOf="@+id/imageButton6"
             app:layout_constraintTop_toBottomOf="@+id/imageButton4"
@@ -105,8 +105,8 @@
             android:id="@+id/imageButton8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="52dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="24dp"
             android:background="@null"
             app:layout_constraintStart_toEndOf="@+id/imageButton2"
             app:layout_constraintTop_toBottomOf="@+id/imageView"
@@ -114,32 +114,27 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
-            android:layout_width="393dp"
-            android:layout_height="153dp"
+            android:layout_width="389dp"
+            android:layout_height="221dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="344dp"
-            android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.187"
+            app:layout_constraintHorizontal_bias="0.214"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="200dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="28dp"
             android:text="Recommand Restaurant"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.045"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
-            app:layout_constraintVertical_bias="0.889" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/btm_nav_bar"
