--- a/app/src/main/res/layout/activity_show_res.xml
+++ b/app/src/main/res/layout/activity_show_res.xml
@@ -4,6 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ShowRes">
+
+    <ImageView
+        android:id="@+id/image_label"
+        android:layout_width="match_parent"
+        android:layout_height="428dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/select"
+            android:layout_width="163dp"
+            android:layout_height="wrap_content"
+            android:text="select"
+            android:layout_gravity="center"
+            android:gravity="center" />
+
+        <Button
+            android:id="@+id/label"
+            android:layout_width="179dp"
+            android:text="label"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+
+            android:gravity="center" />
+    </LinearLayout>
 
 </LinearLayout>
