implement firebase Auth,cloud,Crash,Prefer...

--- a/app/src/main/res/layout/activity_show_res.xml
+++ b/app/src/main/res/layout/activity_show_res.xml
@@ -33,6 +33,14 @@
             android:layout_gravity="center"
 
             android:gravity="center" />
+
+        <Button
+            android:id="@+id/text"
+            android:layout_width="223dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+
+            android:text="label" />
     </LinearLayout>
 
 </LinearLayout>
